--- a/package.json
+++ b/package.json
@@ -8,8 +8,12 @@
   },
   "author": "Wayne Stedman",
   "license": "MIT",
+  "repository": {
+    "type" : "git",
+    "url" : "https://github.com/waynestedman/Mascara.git"
+  },
   "devDependencies": {
-    "autoprefixer": "^9.1.5",
+    "autoprefixer": "^9.4.6",
     "gulp": "^3.9.1",
     "gulp-babel": "^8.0.0",
     "gulp-if": "^2.0.2",
